docs/stylesheets/extra.css
/* https://github.com/squidfunk/mkdocs-material/blob/master/src/assets/stylesheets/main/_colors.scss*/
/* https://github.com/squidfunk/mkdocs-material/blob/master/src/assets/stylesheets/main/_typeset.scss */

:root > *{
    /* Top bar color */
    /*--md-primary-fg-color: #202337;*/
    --md-primary-fg-color: #000000;

    /* Background color */
    --md-default-bg-color: #111111;

    /* Code BG */
    --md-code-bg-color: #343942;

    /* Code FG */
    --md-code-fg-color: #f6f6f6;

    --md-accent-fg-color: #e5a92b;

    --md-typeset-a-color: #e5a92b;

    /* set color of title in side navbar */
    --md-default-fg-color--light: white;

    /* set color of header in side navbar */
    --md-default-fg-color--lightest: black;
}

.md-typeset .tabbed-labels > label
{
    color: #777777;
}

/*!* regular text colour *!*/
/*.md-typeset,*/
/*.md-nav__link,*/
/*.md-nav__item .md-nav__link--active,*/
/*.md-nav__link--passed,*/
/*.md-typeset .admonition*/
/*{*/
/*    color: #c5c5c5;*/
/*}*/

/* Active item in the left nav bar */
/*.md-nav__item .md-nav__link--active*/
/*{*/
/*    !*font-weight: bold;*!*/
/*    !*text-decoration: underline;*!*/
/*    !*outline-style: solid;*!*/
/*    !*outline-width: thin;*!*/
/*    !*outline-color: #333333;*!*/
/*    !*background-color: #222222;*!*/
/*}*/

/* link */
.md-typeset a
{
    color: #d39b13;
}

/* link hover color */
.md-nav__item a:hover,
.md-typeset a:hover
{
    color: #ffc233;
}

.md-typeset h1
{
    font-size: 28px;
    font-weight: bold;
}

.md-typeset h2,
.md-typeset h3,
.md-typeset h4,
.md-typeset h5,
.md-typeset h6
{
    font-style: normal;
    font-weight: normal;
}

/* title colour */
.md-nav__title,
.md-nav__item--section > .md-nav__link,
.md-nav--lifted > .md-nav__list > .md-nav__item--active > .md-nav__link,
.md-typeset .admonition-title,
.md-typeset h1,
.md-typeset h2,
.md-typeset h3,
.md-typeset h4,
.md-typeset h5,
.md-typeset h6
{
    color: #ececec;
}

.md-nav__title,
.md-nav__item--section > .md-nav__link,
.md-nav--lifted > .md-nav__list > .md-nav__item--active > .md-nav__link
{
    font-size: 16px;
}

/* outline the search bar */
.md-search__form
{
    outline-style: solid;
    outline-width: thin;
    outline-color: #333333;
}

